@@ -1,5 +1,15 @@
 == Changelog
 
+=== [Next release]
+
+Added:
+
+* :manifest added to pbuild.edn which allows to add or override default values in MANIFEST.MF
+
+Changed:
+
+* now Created-By field in MANIFEST.MF has value of pbuilder version
+
 === [0.1.5] - 2020-03-01
 
 Added:
